==> MissouriMRDT/Deprecated_Systems/Software/sensor/imu/proto1/LSM9DS1.cpp <==
#include "LSM9DS1.h"
#include <Wire.h> // Wire library is used for I2C
#include <SPI.h>  // SPI library is used for...SPI.
  #include "Arduino.h"
  #include "WProgram.h"

uint16_t LSM9DS1::begin(gyro_scale gScl, accel_scale aScl, mag_scale mScl, 
						gyro_odr gODR, accel_odr aODR, mag_odr mODR,
						mag_xy_om mXYOM, mag_z_om mZOM)
{
  // Store the given scales in class variables. These scale variables
  // are used throughout to calculate the actual g's, DPS,and Gs's.
  gScale = gScl;
  aScale = aScl;
  mScale = mScl;
  
  // Once we have the scale values, we can calculate the resolution
  // of each sensor. That's what these functions are for. One for each sensor
  calcgRes(); // Calculate DPS / ADC tick, stored in gRes variable
  calcmRes(); // Calculate Gs / ADC tick, stored in mRes variable
  calcaRes(); // Calculate g / ADC tick, stored in aRes variable
  
  // Now, initialize our hardware interface.
  if (interfaceMode == MODE_I2C)  // If we're using I2C
    initI2C();          // Initialize I2C
  else if (interfaceMode == MODE_SPI)   // else, if we're using SPI
    initSPI();              // Initialize SPI
  
  // To verify communication, we can read from the WHO_AM_I register of
  // each device. Store those in a variable so we can return them.
  uint8_t agTest = agReadByte(WHO_AM_I_AG);    // Read the accel/gyro WHO_AM_I - should be 0x68
  uint8_t mTest = mReadByte(WHO_AM_I_M); // Read the mag WHO_AM_I - should be 0x3D
  
  // Gyro initialization stuff:
  initAccelGyro(); // This will "turn on" the gyro. Setting up interrupts, etc.
  setGyroODR(gODR); // Set the gyro output data rate and bandwidth.
  setGyroScale(gScale); // Set the gyro range
  
  // Accelerometer initialization stuff:
//  initAccel(); // "Turn on" all axes of the accel. Set up interrupts, etc.
  setAccelODR(aODR); // Set the accel data rate.
  setAccelScale(aScale); // Set the accel range.
  
  // Magnetometer initialization stuff:
  initMag(); // "Turn on" all axes of the mag. Set up interrupts, etc.
  setMagODR(mODR); // Set the magnetometer output data rate.
  setMagScale(mScale); // Set the magnetometer's range.
  setMagOM(mXYOM, mZOM); // Set the magnetometer's operating modes.
  
  // Once everything is initialized, return the WHO_AM_I registers we read:
  return (mTest << 8) | agTest;
}

void LSM9DS1::initMag()
{ 
  /* CTRL_REG1_M sets up temp compensation, X/Y axes operative mode, output data rate, self-test
  Bits[7:0] - TEMP_COMP OM1 OM0 DO2 DO1 DO0 0 ST
  TEMP_COMP - temperature compensation enable; 0: disabled, 1: enabled
  OM[1:0] - X and Y axes operative mode selection
    00: low-power
    01: medium-performance
    10: high-performance
    11: ultra-high performance
  DO[2:0] - output data rate selection
    *See Table 111 in datasheet
  ST - self test enable; 0: disabled, 1: enabled */
  mWriteByte(CTRL_REG1_M, 0B00110000); // no temp comp, medium performance, 10Hz ODR, no self test

  /* CTRL_REG2_M sets up full-scale selection, reboot, sw reset
  Bits[7:0] - 0 FS1 FS0 0 REBOOT SOFT_RST 0 0
  FS[1:0] - full-scale selection; 00: 4g, 01: 8g, 10: 12g, 11: 16g
  REBOOT - reboot memory content; 0: normal mode, 1: reboot memory content
  SOFT_RST - config regs and user reg reset function; 0: default value, 1: reset operation */
  mWriteByte(CTRL_REG2_M, 0B00000000);

  /* CTRL_REG3_M sets up I2C disable, low power mode, SPI mode select, operating mode
  Bits[7:0] - I2C_DISABLE 0 LP 0 0 SIM MD1 MD0
  I2C_DISABLE - disable I2C interface; 0: I2C enable, 1: I2C disable
  LP - low-power mode config
    If this bit is ‘1’, the DO[2:0] is set to 0.625 Hz and the system performs, for each
    channel, the minimum number of averages. Once the bit is set to ‘0’, the magnetic
    data rate is configured by the DO bits in the CTRL_REG1_M (20h) register.
  SIM - SPI Serial Interface mode selection
    0: SPI only write operations enabled
    1: SPI read and write operations enabled
  MD[1:0] - operating mode selection
    00: Continuous-conversion mode
    01: Single-conversion mode
    10/11: Power-down mode */
  mWriteByte(CTRL_REG3_M, 0B00000000); // I2C enable, LP disable, SPI r/w operations enable, cont.-conv. mode (default)

  /* CTRL_REG4_M sets up Z axis operative mode, Endian data selection
  Bits[7:0] - 0 0 0 0 OMZ1 OMZ0 BLE 0
  OMZ[1:0] - Z-axis operative mode selection
    00: low-power
    01: medium-performance
    10: high-performance
    11: ultra-high performance
  BLE - Big/Little Endian data selection
    0: data LSB @ lower address, 1: data MSB @ lower address */
  mWriteByte(CTRL_REG4_M, 0B00000000); // low-power mode, data LSB @ lower address

  /* CTRL_REG5_M sets up block data for magnetic data
  Bits[7:0] - 0 BDU 0 0 0 0 0 0
  BDU - block data update for magnetic data
    0: continuous update
    1: output regs not updated until MSB adn LSB have been read */
  mWriteByte(CTRL_REG5_M, 0B00000000); // continuous update
}

void LSM9DS1::setGyroScale(gyro_scale gScl)
{
  // We need to preserve the other bytes in CTRL_REG4_G. So, first read it:
  uint8_t temp = agReadByte(CTRL_REG1_G);
  // Then mask out the gyro scale bits:
  temp &= 0xFF^(0x3 << 3);
  // Then shift in our new scale bits:
  temp |= gScl << 3;
  // And write the new register value back into CTRL_REG4_G:
  agWriteByte(CTRL_REG1_G, temp);
  
  // We've updated the sensor, but we also need to update our class variables
  // First update gScale:
  gScale = gScl;
  // Then calculate a new gRes, which relies on gScale being set correctly:
  calcgRes();
}

void LSM9DS1::setAccelScale(accel_scale aScl)
{
  // We need to preserve the other bytes in CTRL_REG2_XM. So, first read it:
  uint8_t temp = agReadByte(CTRL_REG6_XL);
  // Then mask out the accel scale bits:
  temp &= 0xFF^(0x3 << 3);
  // Then shift in our new scale bits:
  temp |= aScl << 3;
  // And write the new register value back into CTRL_REG2_XM:
  agWriteByte(CTRL_REG6_XL, temp);
  
  // We've updated the sensor, but we also need to update our class variables
  // First update aScale:
  aScale = aScl;
  // Then calculate a new aRes, which relies on aScale being set correctly:
  calcaRes();
}

void LSM9DS1::setGyroODR(gyro_odr gRate)
{
  // We need to preserve the other bytes in CTRL_REG1_G. So, first read it:
  uint8_t temp = agReadByte(CTRL_REG1_G);
  // Then mask out the gyro ODR bits (ODR and BW):
  temp &= 0B00011100;
  // Then put in our new ODR bits:
  temp |= gRate;
  // And write the new register value back into CTRL_REG1_G:
  agWriteByte(CTRL_REG1_G, temp);
}

void LSM9DS1::setAccelODR(accel_odr aRate) // Only used when in accel-only mode, o/w ODR determined by setGyroODR
{
  // We need to preserve the other bytes in CTRL_REG1_G. So, first read it:
  uint8_t temp = agReadByte(CTRL_REG6_XL);
  // Then mask out the accel ODR bits (ODR and BW):
  temp &= 0B00011111;
  // Then put in our new ODR bits:
  temp |= (aRate << 5);
  // And write the new register value back into CTRL_REG1_G:
  agWriteByte(CTRL_REG6_XL, temp);
}

void LSM9DS1::calcgRes()
{
  // Possible gyro scales (and their register bit settings) are:
  // 245 DPS (00), 500 DPS (01), 2000 DPS (11). Here's a bit of an algorithm
  // to calculate DPS/(ADC tick) based on that 2-bit value:
  switch (gScale)
  {
  case G_SCALE_245DPS:
    gRes = 245.0 / 32768.0;
    break;
  case G_SCALE_500DPS:
    gRes = 500.0 / 32768.0;
    break;
  case G_SCALE_2000DPS:
    gRes = 2000.0 / 32768.0;
    break;
  }
}

void LSM9DS1::calcaRes()
{
  // Possible accelerometer scales (and their register bit settings) are:
  // 2 g (00), 4g (10), 8g (11), 16g (01). Here's a bit of an 
  // algorithm to calculate g/(ADC tick) based on that 2-bit value:
//  aRes = aScale == A_SCALE_16G ? 16.0 / 32768.0 : 
//       (((float) aScale + 1.0) * 2.0) / 32768.0;
	switch (aScale)
	{
	case A_SCALE_2G:
		aRes = 2.0 / 32768.0;
		break;
	case A_SCALE_4G:
		aRes = 4.0 / 32768.0;
		break;
	case A_SCALE_8G:
		aRes = 8.0 / 32768.0;
		break;
	case A_SCALE_16G:
		aRes = 16.0 / 32768.0;
		break;
	}	
}

void LSM9DS1::calcmRes()
{
  // Possible magnetometer scales (and their register bit settings) are:
  // 4 Gs (00), 8 Gs (01), 12 Gs (10) 16 Gs (11). Here's a bit of an algorithm
  // to calculate Gs/(ADC tick) based on that 2-bit value:
//  mRes = mScale == M_SCALE_4GS ? 4.0 / 32768.0 : 
//         (float) (mScale << 2) / 32768.0;
	switch (mScale)
	{
	case M_SCALE_4GS:
		mRes = 4.0 / 32768.0;
		break;
	case M_SCALE_8GS:
		mRes = 8.0 / 32768.0;
		break;
	case M_SCALE_12GS:
		mRes = 12.0 / 32768.0;
		break;
	case M_SCALE_16GS:
		mRes = 16.0 / 32768.0;
		break;
	}
}

void LSM9DS1::mWriteByte(uint8_t subAddress, uint8_t data)
{
  // Whether we're using I2C or SPI, write a byte using the
  // accelerometer-specific I2C address or SPI CS pin.
  if (interfaceMode == MODE_I2C)
    return I2CwriteByte(mAddress, subAddress, data);
  else if (interfaceMode == MODE_SPI)
    return SPIwriteByte(mAddress, subAddress, data);
}

uint8_t LSM9DS1::mReadByte(uint8_t subAddress)
{
  // Whether we're using I2C or SPI, read a byte using the
  // accelerometer-specific I2C address or SPI CS pin.
  if (interfaceMode == MODE_I2C)
    return I2CreadByte(mAddress, subAddress);
  else if (interfaceMode == MODE_SPI)
    return SPIreadByte(mAddress, subAddress);
}

void LSM9DS1::mReadBytes(uint8_t subAddress, uint8_t * dest, uint8_t count)
{
  // Whether we're using I2C or SPI, read multiple bytes using the
  // accelerometer-specific I2C address or SPI CS pin.
  if (interfaceMode == MODE_I2C)
    I2CreadBytes(mAddress, subAddress, dest, count);
  else if (interfaceMode == MODE_SPI)
    SPIreadBytes(mAddress, subAddress, dest, count);
}

void LSM9DS1::initSPI()
{
  pinMode(agAddress, OUTPUT);
  digitalWrite(agAddress, HIGH);
  pinMode(mAddress, OUTPUT);
  digitalWrite(mAddress, HIGH);
  
  SPI.begin();
  // Maximum SPI frequency is 10MHz, could divide by 2 here:
  SPI.setClockDivider(SPI_CLOCK_DIV4);
  // Data is read and written MSb first.
  SPI.setBitOrder(MSBFIRST);
  // Data is captured on rising edge of clock (CPHA = 0)
  // Base value of the clock is HIGH (CPOL = 1)
  SPI.setDataMode(SPI_MODE1);
}

void LSM9DS1::SPIwriteByte(uint8_t csPin, uint8_t subAddress, uint8_t data)
{
  digitalWrite(csPin, LOW); // Initiate communication
  
  // If write, bit 0 (MSB) should be 0
  // If single write, bit 1 should be 0
  SPI.transfer(subAddress & 0x3F); // Send Address
  SPI.transfer(data); // Send data
  
  digitalWrite(csPin, HIGH); // Close communication
}

void LSM9DS1::SPIreadBytes(uint8_t csPin, uint8_t subAddress, uint8_t * dest, uint8_t count)
{
  digitalWrite(csPin, LOW); // Initiate communication
  // To indicate a read, set bit 0 (msb) to 1
  // If we're reading multiple bytes, set bit 1 to 1
  // The remaining six bytes are the address to be read
  if (count > 1)
    SPI.transfer(0xC0 | (subAddress & 0x3F));
  else
    SPI.transfer(0x80 | (subAddress & 0x3F));
  for (int i=0; i<count; i++)
  {
    dest[i] = SPI.transfer(0x00); // Read into destination array
  }
  digitalWrite(csPin, HIGH); // Close communication
}

void LSM9DS1::I2CwriteByte(uint8_t address, uint8_t subAddress, uint8_t data)
{
  Wire.beginTransmission(address);  // Initialize the Tx buffer
  Wire.write(subAddress);           // Put slave register address in Tx buffer
  Wire.write(data);                 // Put data in Tx buffer
  Wire.endTransmission();           // Send the Tx buffer
}

uint8_t LSM9DS1::I2CreadByte(uint8_t address, uint8_t subAddress)
{
  uint8_t data; // `data` will store the register data   
  Wire.beginTransmission(address);         // Initialize the Tx buffer
  Wire.write(subAddress);                  // Put slave register address in Tx buffer
  Wire.endTransmission(false);             // Send the Tx buffer, but send a restart to keep connection alive
  Wire.requestFrom(address, (uint8_t) 1);  // Read one byte from slave register address 
  data = Wire.read();                      // Fill Rx buffer with result
  return data;                             // Return data read from slave register
}

void LSM9DS1::I2CreadBytes(uint8_t address, uint8_t subAddress, uint8_t * dest, uint8_t count)
{  
  Wire.beginTransmission(address);   // Initialize the Tx buffer
  // Next send the register to be read. OR with 0x80 to indicate multi-read.
  Wire.write(subAddress | 0x80);     // Put slave register address in Tx buffer
  Wire.endTransmission(false);       // Send the Tx buffer, but send a restart to keep connection alive
  uint8_t i = 0;
  Wire.requestFrom(address, count);  // Read bytes from slave register address 
  while (Wire.available()) 
  {
    dest[i++] = Wire.read(); // Put read results in the Rx buffer
  }
}
